--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <title>Personal Portfolio</title>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <!-- Favicons -->
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
-  <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+<meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml"> -->
 
   <!-- Custom styles for this template -->
   <script src="https://kit.fontawesome.com/2128495c68.js" crossorigin="anonymous"></script>
@@ -22,11 +25,54 @@
 </head>
 
 <body>
-  <div class="container-fluid">
 
-    <h1>I am working! 🤵</h1>
-    <p>NICE!</p>
-  </div>
+  <section id="navigation-bar">
+    <!-- Navigation Bar -->
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+
+        <div class="justify-content-center collapse navbar-collapse" id="navbarcollapse">
+          <a class="navbar-brand-dark mx-5">Home</a>
+          <ul class="navbar-nav">
+            <li class="nav-item mx-5">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item mx-5">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+
+        </div>
+      </nav>
+    </div>
+  </section>
+
+
+  <!-- Who am i section! -->
+  <section id="iam">
+    <div class="container-fluid container-all">
+
+      <h1>I am working! 🤵</h1>
+      <p>NICE!</p>
+    </div>
+  </section>
+
+  <section id="portfolio">
+    <div class="container-fluid container-all">
+
+    </div>
+
+  </section>
+
+  <section id="contact">
+    <div class="container-fluid container-all">
+
+    </div>
+  </section>
+
 
 </body>
 
