images create, background change, navbar change

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <!-- Favicons -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
-<meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml"> -->
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <script src="https://kit.fontawesome.com/2128495c68.js" crossorigin="anonymous"></script>
@@ -35,13 +34,13 @@
         </button>
 
         <div class="justify-content-center collapse navbar-collapse" id="navbarcollapse">
-          <a class="navbar-brand-dark mx-5">Home</a>
+          <a class="navbar-brand mx-5" href="#iam"><img src="images/logo.png" alt=""></a>
           <ul class="navbar-nav">
             <li class="nav-item mx-5">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item mx-5">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
 
@@ -54,14 +53,27 @@
   <!-- Who am i section! -->
   <section id="iam">
     <div class="container-fluid container-all">
+      <div class="row">
+        <div class="col-lg-6 px-5">
+          <h1>Vinicius J. S. Tasso</h1>
+          <p class="subtitle">Full Stack Web Developer.</p>
+        </div>
+        <div class="col-lg-6 px-5 py-5">
+          <!-- <h1><i class="fas fa-code"></i></h1> -->
+          <img src="images/logo.png" alt="">
+        </div>
 
-      <h1>I am working! 🤵</h1>
-      <p>NICE!</p>
+        <div class="col-12 description">
+          <p>{ Age : 23, UndergraduantionIn : Industrial Engineering, Country : Brazil, Job : Full Stack Web Developer }</p>
+        </div>
+
+      </div>
     </div>
   </section>
 
   <section id="portfolio">
     <div class="container-fluid container-all">
+      <h2>Project Portfolio</h2>
 
     </div>
 
@@ -69,6 +81,7 @@
 
   <section id="contact">
     <div class="container-fluid container-all">
+      <h2>Contact me!</h2>
 
     </div>
   </section>
